k8/letmein-website-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: letmein-website
  labels:
    app: letmein
spec:
  selector:
    app: letmein
    tier: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letmein-website
  labels:
    app: letmein
spec:
  replicas: 1
  selector:
    matchLabels:
      app: letmein
      tier: website
  template:
    metadata:
      labels:
        app: letmein
        tier: website
    spec:
      containers:
        - name: letmein
          image: anotherchris/letmein:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 128Mi
              cpu: 500m
            limits:
              memory: 192Mi
              cpu: 1000m
